--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 [dependencies]
 rodio = "0.9.0"
-iron = "0.5.1"
 mime = "0.2.3"
+rocket = "0.4.2"
+
+iron = "0.5.1"
 router = "0.5.1"
 urlencoded = "0.5.0"
