--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustadio"
 version = "0.1.0"
-authors = ["tango <cteters@pdx.edu>"]
+authors = ["Christopher Teters <cteters@pdx.edu>", "Max Smiley <smiley6@pdx.edu>", "Paul Hubbard <phubbard@pdx.edu>"]
 edition = "2018"
 
 [dependencies]
