--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rustadio"
 version = "0.1.0"
-authors = ["tango <cteters@pdx.edu>"]
+authors = ["Christopher Teters <cteters@pdx.edu>", "Max Smiley <smiley6@pdx.edu>", "Paul Hubbard <phubbard@pdx.edu>"]
 edition = "2018"
 
 [dependencies]
 rodio = "0.9.0"
-iron = "0.5.1"
 mime = "0.2.3"
-router = "0.5.1"
-urlencoded = "0.5.0"
+rocket = "0.4.2"
+id3 = "0.3.0"
+m3u = "1.0.0"
+
