--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,8 @@ serde_derive = "1.0"
 
 rodio = "0.9.0"
 id3 = "0.3.0"
+id3-image = "0.1.1"
 m3u = "1.0.0"
-
-
 
 [dependencies.rocket_contrib]
 rocket_contrib = "0.4.2"
