--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rodio = "0.9.0"
 id3 = "0.3.0"
 id3-image = "0.1.1"
 m3u = "1.0.0"
+image = "0.21.0"
 
 [dependencies.rocket_contrib]
 rocket_contrib = "0.4.2"
