Have JSON working! Right now, if you hit the get available songs, then hit play, you will play the songs that are in the available songs list. I still haven't really figured out how to make it delay, so that the songs won't play one right after another. And creating a playlist may be harder than I first thought...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ image = "0.21.0"
 [dependencies.rocket_contrib]
 rocket_contrib = "0.4.2"
 default_features = false
-features = ["tera_templates", "serve"]
+features = ["tera_templates", "serve", "json"]
 
 
 
