--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ id3-image = "0.1.1"
 m3u = "1.0.0"
 image = "0.21.0"
 mp3-duration = "0.1.6"
+qr2term = "0.1.3"
 
 [dependencies.rocket_contrib]
 rocket_contrib = "0.4.2"
