--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ m3u = "1.0.0"
 image = "0.21.0"
 mp3-duration = "0.1.6"
 qr2term = "0.1.3"
-gstreamer = "0.7.0"
+gstreamer = "0.14.3"
+glib = "0.8.1"
+gstreamer-player = "0.14.0"
 
 [dependencies.rocket_contrib]
 rocket_contrib = "0.4.2"
